[gd_scene load_steps=16 format=3 uid="uid://cjgwygl1psnne"]

[ext_resource type="Script" path="res://scenes/cell/cell.gd" id="1_whknc"]
[ext_resource type="Material" path="res://assets/materials/cobblestone.tres" id="2_yih3j"]
[ext_resource type="Material" uid="uid://cwmifmfw4402q" path="res://assets/materials/birck.tres" id="3_n0awh"]
[ext_resource type="Texture2D" uid="uid://bsvuuwfpmpim1" path="res://assets/textures/smallbirckbothpillars.png" id="4_1ko2n"]
[ext_resource type="Texture2D" uid="uid://di50ng7jmtboq" path="res://assets/textures/smallbircktrim.png" id="4_lppg5"]
[ext_resource type="Material" uid="uid://df30sdy12o43m" path="res://assets/materials/smallbirck.tres" id="4_py8i7"]
[ext_resource type="Texture2D" uid="uid://brmv2teuicjc4" path="res://assets/textures/smallbircktrim_n.png" id="5_it0q4"]
[ext_resource type="Material" uid="uid://3drgxjdkxc4r" path="res://assets/materials/smallbircktriplanar.tres" id="6_tqfe3"]

[sub_resource type="QuadMesh" id="QuadMesh_ofxii"]
size = Vector2(2.01, 2.01)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dmiyj"]
albedo_texture = ExtResource("4_1ko2n")
uv1_offset = Vector3(0, 1, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_e1sem"]
albedo_texture = ExtResource("4_lppg5")
normal_enabled = true
normal_scale = 0.2
normal_texture = ExtResource("5_it0q4")
uv1_scale = Vector3(2.82, 0.565, 1)
uv1_offset = Vector3(0, 0.72, 0)

[sub_resource type="BoxMesh" id="BoxMesh_bmxim"]
size = Vector3(2, 0.58, 0.2)

[sub_resource type="QuadMesh" id="QuadMesh_err8c"]
size = Vector2(2.01, 2.01)

[sub_resource type="BoxShape3D" id="BoxShape3D_0xxdt"]

[sub_resource type="BoxMesh" id="BoxMesh_abicl"]
size = Vector3(0.5, 2, 0.5)

[node name="Cell" type="Node3D"]
script = ExtResource("1_whknc")

[node name="BottomFace" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1.19249e-08, 1, 0, -1, 1.19249e-08, 0, 0, 0)
material_override = ExtResource("2_yih3j")
cast_shadow = 2
mesh = SubResource("QuadMesh_ofxii")

[node name="NorthFace" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -1)
material_override = SubResource("StandardMaterial3D_dmiyj")
cast_shadow = 2
mesh = SubResource("QuadMesh_ofxii")

[node name="Trim" type="MeshInstance3D" parent="NorthFace"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.729, -0.05)
material_override = SubResource("StandardMaterial3D_e1sem")
cast_shadow = 2
mesh = SubResource("BoxMesh_bmxim")
skeleton = NodePath("../..")

[node name="EastFace" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 1, 1, 0)
material_override = SubResource("StandardMaterial3D_dmiyj")
cast_shadow = 2
mesh = SubResource("QuadMesh_ofxii")

[node name="Trim" type="MeshInstance3D" parent="EastFace"]
transform = Transform3D(1, 0, 7.10543e-15, 0, 1, 0, -7.10543e-15, 0, 1, 0, -0.729, -0.05)
material_override = SubResource("StandardMaterial3D_e1sem")
cast_shadow = 2
mesh = SubResource("BoxMesh_bmxim")
skeleton = NodePath("../..")

[node name="WestFace" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -1, 1, 0)
material_override = ExtResource("4_py8i7")
cast_shadow = 2
mesh = SubResource("QuadMesh_ofxii")

[node name="Trim" type="MeshInstance3D" parent="WestFace"]
transform = Transform3D(1, 0, -1.74846e-07, 0, 1, 0, 1.74846e-07, 0, 1, 0, -0.729, -0.05)
material_override = SubResource("StandardMaterial3D_e1sem")
cast_shadow = 2
mesh = SubResource("BoxMesh_bmxim")
skeleton = NodePath("../..")

[node name="SouthFace" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1, 1)
material_override = ExtResource("4_py8i7")
cast_shadow = 2
mesh = SubResource("QuadMesh_err8c")

[node name="Trim" type="MeshInstance3D" parent="SouthFace"]
transform = Transform3D(1, 0, -1.74846e-07, 0, 1, 0, 1.74846e-07, 0, 1, 0, -0.729, -0.05)
material_override = SubResource("StandardMaterial3D_e1sem")
cast_shadow = 2
mesh = SubResource("BoxMesh_bmxim")
skeleton = NodePath("../..")

[node name="TopFace" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.000246048, 2.00001, 0.00649685)
material_override = ExtResource("3_n0awh")
cast_shadow = 2
mesh = SubResource("QuadMesh_ofxii")

[node name="Collision" type="Area3D" parent="."]

[node name="CellCollision" type="CollisionShape3D" parent="Collision"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("BoxShape3D_0xxdt")

[node name="Pillars" type="Node3D" parent="."]

[node name="SouthEastPillar" type="MeshInstance3D" parent="Pillars"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1)
visible = false
material_override = ExtResource("6_tqfe3")
mesh = SubResource("BoxMesh_abicl")
skeleton = NodePath("../..")

[node name="SouthWestPillar" type="MeshInstance3D" parent="Pillars"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 1, 1)
visible = false
material_override = ExtResource("6_tqfe3")
mesh = SubResource("BoxMesh_abicl")
skeleton = NodePath("../..")

[node name="NorthWestPillar" type="MeshInstance3D" parent="Pillars"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 1, -1)
visible = false
material_override = ExtResource("6_tqfe3")
mesh = SubResource("BoxMesh_abicl")
skeleton = NodePath("../..")

[node name="NorthEastPillar" type="MeshInstance3D" parent="Pillars"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, -1)
visible = false
material_override = ExtResource("6_tqfe3")
mesh = SubResource("BoxMesh_abicl")
skeleton = NodePath("../..")
